larger mobile nav darker desktop nav and fixed alignment issues on mobnav

--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ a {
   padding:0;
   overflow:hidden;
   background-color:rgb(128,128,128);
-  background-color:rgba(128,128,128,.8);
+  background-color:rgba(70,70,70,.7);
   position:fixed;
   top: 0;
   width:100%;
@@ -306,7 +306,7 @@ a.dtnavphone:hover {
 }
 .navMainButton {
   display:inline-block;
-  padding:10px;
+  padding:15px 10px 15px 10px;
   float:left;
 }
 .navMainButton a {
@@ -317,20 +317,19 @@ a.dtnavphone:hover {
 
 .navDropButton {
   color:white;
-  padding:10px;
+
   float: right;
   cursor:pointer;
 }
 .subMenu a {
   display:inline-block;
   color:white;
-  margin-left: -10px;
   text-decoration: none;
 
 }
 .navSubButton{
   width: 100%;
-  padding:10px 10px 10px 30px;
+  padding:15px 10px 15px 30px;
   float: left;
   display: block;
 }
@@ -339,6 +338,7 @@ a.dtnavphone:hover {
   text-align:center;
 }
 .navSubButton.fa {
+  max-width: 100%;
   text-align: center;
   padding:10px;
   border-radius:0;
